ci/full-template.yaml
Resources:
  privateapitutorialvpc77564028:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: PrivateApiStack/private-api-tutorial-vpc
  privateapitutorialvpcPublicSubnet1Subnet1E6D4A8F:
    Type: 'AWS::EC2::Subnet'
    Properties:
      CidrBlock: 10.0.0.0/18
      VpcId: !Ref privateapitutorialvpc77564028
      AvailabilityZone: !Select 
        - 0
        - !GetAZs ''
      MapPublicIpOnLaunch: true
      Tags:
        - Key: 'aws-cdk:subnet-name'
          Value: Public
        - Key: 'aws-cdk:subnet-type'
          Value: Public
        - Key: Name
          Value: PrivateApiStack/private-api-tutorial-vpc/PublicSubnet1
  privateapitutorialvpcPublicSubnet1RouteTable220AD332:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref privateapitutorialvpc77564028
      Tags:
        - Key: Name
          Value: PrivateApiStack/private-api-tutorial-vpc/PublicSubnet1
  privateapitutorialvpcPublicSubnet1RouteTableAssociation2A436FA4:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref privateapitutorialvpcPublicSubnet1RouteTable220AD332
      SubnetId: !Ref privateapitutorialvpcPublicSubnet1Subnet1E6D4A8F
  privateapitutorialvpcPublicSubnet1DefaultRouteFD82F4FD:
    Type: 'AWS::EC2::Route'
    Properties:
      RouteTableId: !Ref privateapitutorialvpcPublicSubnet1RouteTable220AD332
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref privateapitutorialvpcIGWB2D7E529
    DependsOn:
      - privateapitutorialvpcVPCGW038138D3
  privateapitutorialvpcPublicSubnet1EIPE9BDA2D4:
    Type: 'AWS::EC2::EIP'
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: PrivateApiStack/private-api-tutorial-vpc/PublicSubnet1
  privateapitutorialvpcPublicSubnet1NATGateway49E176B5:
    Type: 'AWS::EC2::NatGateway'
    Properties:
      AllocationId: !GetAtt 
        - privateapitutorialvpcPublicSubnet1EIPE9BDA2D4
        - AllocationId
      SubnetId: !Ref privateapitutorialvpcPublicSubnet1Subnet1E6D4A8F
      Tags:
        - Key: Name
          Value: PrivateApiStack/private-api-tutorial-vpc/PublicSubnet1
  privateapitutorialvpcPublicSubnet2SubnetD4358746:
    Type: 'AWS::EC2::Subnet'
    Properties:
      CidrBlock: 10.0.64.0/18
      VpcId: !Ref privateapitutorialvpc77564028
      AvailabilityZone: !Select 
        - 1
        - !GetAZs ''
      MapPublicIpOnLaunch: true
      Tags:
        - Key: 'aws-cdk:subnet-name'
          Value: Public
        - Key: 'aws-cdk:subnet-type'
          Value: Public
        - Key: Name
          Value: PrivateApiStack/private-api-tutorial-vpc/PublicSubnet2
  privateapitutorialvpcPublicSubnet2RouteTable2FCED24D:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref privateapitutorialvpc77564028
      Tags:
        - Key: Name
          Value: PrivateApiStack/private-api-tutorial-vpc/PublicSubnet2
  privateapitutorialvpcPublicSubnet2RouteTableAssociation7FD8C4E0:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref privateapitutorialvpcPublicSubnet2RouteTable2FCED24D
      SubnetId: !Ref privateapitutorialvpcPublicSubnet2SubnetD4358746
  privateapitutorialvpcPublicSubnet2DefaultRoute12A321EC:
    Type: 'AWS::EC2::Route'
    Properties:
      RouteTableId: !Ref privateapitutorialvpcPublicSubnet2RouteTable2FCED24D
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref privateapitutorialvpcIGWB2D7E529
    DependsOn:
      - privateapitutorialvpcVPCGW038138D3
  privateapitutorialvpcPublicSubnet2EIPECEDCAAB:
    Type: 'AWS::EC2::EIP'
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: PrivateApiStack/private-api-tutorial-vpc/PublicSubnet2
  privateapitutorialvpcPublicSubnet2NATGateway6BD7DA52:
    Type: 'AWS::EC2::NatGateway'
    Properties:
      AllocationId: !GetAtt 
        - privateapitutorialvpcPublicSubnet2EIPECEDCAAB
        - AllocationId
      SubnetId: !Ref privateapitutorialvpcPublicSubnet2SubnetD4358746
      Tags:
        - Key: Name
          Value: PrivateApiStack/private-api-tutorial-vpc/PublicSubnet2
  privateapitutorialvpcPrivateSubnet1Subnet7BE99BB4:
    Type: 'AWS::EC2::Subnet'
    Properties:
      CidrBlock: 10.0.128.0/18
      VpcId: !Ref privateapitutorialvpc77564028
      AvailabilityZone: !Select 
        - 0
        - !GetAZs ''
      MapPublicIpOnLaunch: false
      Tags:
        - Key: 'aws-cdk:subnet-name'
          Value: Private
        - Key: 'aws-cdk:subnet-type'
          Value: Private
        - Key: Name
          Value: PrivateApiStack/private-api-tutorial-vpc/PrivateSubnet1
  privateapitutorialvpcPrivateSubnet1RouteTableA8908DA2:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref privateapitutorialvpc77564028
      Tags:
        - Key: Name
          Value: PrivateApiStack/private-api-tutorial-vpc/PrivateSubnet1
  privateapitutorialvpcPrivateSubnet1RouteTableAssociation64FF2F63:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref privateapitutorialvpcPrivateSubnet1RouteTableA8908DA2
      SubnetId: !Ref privateapitutorialvpcPrivateSubnet1Subnet7BE99BB4
  privateapitutorialvpcPrivateSubnet1DefaultRoute8319F627:
    Type: 'AWS::EC2::Route'
    Properties:
      RouteTableId: !Ref privateapitutorialvpcPrivateSubnet1RouteTableA8908DA2
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref privateapitutorialvpcPublicSubnet1NATGateway49E176B5
  privateapitutorialvpcPrivateSubnet2Subnet34C136F7:
    Type: 'AWS::EC2::Subnet'
    Properties:
      CidrBlock: 10.0.192.0/18
      VpcId: !Ref privateapitutorialvpc77564028
      AvailabilityZone: !Select 
        - 1
        - !GetAZs ''
      MapPublicIpOnLaunch: false
      Tags:
        - Key: 'aws-cdk:subnet-name'
          Value: Private
        - Key: 'aws-cdk:subnet-type'
          Value: Private
        - Key: Name
          Value: PrivateApiStack/private-api-tutorial-vpc/PrivateSubnet2
  privateapitutorialvpcPrivateSubnet2RouteTableCFEB4060:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref privateapitutorialvpc77564028
      Tags:
        - Key: Name
          Value: PrivateApiStack/private-api-tutorial-vpc/PrivateSubnet2
  privateapitutorialvpcPrivateSubnet2RouteTableAssociation13071032:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref privateapitutorialvpcPrivateSubnet2RouteTableCFEB4060
      SubnetId: !Ref privateapitutorialvpcPrivateSubnet2Subnet34C136F7
  privateapitutorialvpcPrivateSubnet2DefaultRoute32921C24:
    Type: 'AWS::EC2::Route'
    Properties:
      RouteTableId: !Ref privateapitutorialvpcPrivateSubnet2RouteTableCFEB4060
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref privateapitutorialvpcPublicSubnet2NATGateway6BD7DA52
  privateapitutorialvpcIGWB2D7E529:
    Type: 'AWS::EC2::InternetGateway'
    Properties:
      Tags:
        - Key: Name
          Value: PrivateApiStack/private-api-tutorial-vpc
  privateapitutorialvpcVPCGW038138D3:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      VpcId: !Ref privateapitutorialvpc77564028
      InternetGatewayId: !Ref privateapitutorialvpcIGWB2D7E529
  privateapitutorialvpceSecurityGroup8C8216BD:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: PrivateApiStack/private-api-tutorial-vpce/SecurityGroup
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: '-1'
      SecurityGroupIngress:
        - CidrIp: !GetAtt 
            - privateapitutorialvpc77564028
            - CidrBlock
          Description: !Join 
            - ''
            - - 'from '
              - !GetAtt 
                - privateapitutorialvpc77564028
                - CidrBlock
              - ':443'
          FromPort: 443
          IpProtocol: tcp
          ToPort: 443
      VpcId: !Ref privateapitutorialvpc77564028
  privateapitutorialvpce487DB922:
    Type: 'AWS::EC2::VPCEndpoint'
    Properties:
      ServiceName: !Join 
        - ''
        - - com.amazonaws.
          - !Ref 'AWS::Region'
          - .execute-api
      VpcId: !Ref privateapitutorialvpc77564028
      PrivateDnsEnabled: true
      SecurityGroupIds:
        - !GetAtt 
          - privateapitutorialvpceSecurityGroup8C8216BD
          - GroupId
      SubnetIds:
        - !Ref privateapitutorialvpcPrivateSubnet1Subnet7BE99BB4
        - !Ref privateapitutorialvpcPrivateSubnet2Subnet34C136F7
      VpcEndpointType: Interface
  privateapitutorialtestinstanceInstanceSecurityGroupEE1A4FEC:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: >-
        PrivateApiStack/private-api-tutorial-test-instance/Resource/InstanceSecurityGroup
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: '-1'
      Tags:
        - Key: Name
          Value: private-api-tutorial
      VpcId: !Ref privateapitutorialvpc77564028
  privateapitutorialtestinstanceInstanceRole4DC30CEF:
    Type: 'AWS::IAM::Role'
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: 'sts:AssumeRole'
            Effect: Allow
            Principal:
              Service: !Join 
                - ''
                - - ec2.
                  - !Ref 'AWS::URLSuffix'
        Version: 2012-10-17
      Tags:
        - Key: Name
          Value: private-api-tutorial
  privateapitutorialtestinstanceInstanceRoleDefaultPolicyA9CCD2E3:
    Type: 'AWS::IAM::Policy'
    Properties:
      PolicyDocument:
        Statement:
          - Action:
              - 'ssmmessages:*'
              - 'ssm:UpdateInstanceInformation'
              - 'ec2messages:*'
            Effect: Allow
            Resource: '*'
        Version: 2012-10-17
      PolicyName: privateapitutorialtestinstanceInstanceRoleDefaultPolicyA9CCD2E3
      Roles:
        - !Ref privateapitutorialtestinstanceInstanceRole4DC30CEF
  privateapitutorialtestinstanceInstanceProfileFF28A884:
    Type: 'AWS::IAM::InstanceProfile'
    Properties:
      Roles:
        - !Ref privateapitutorialtestinstanceInstanceRole4DC30CEF
  privateapitutorialtestinstance923DEA4B:
    Type: 'AWS::EC2::Instance'
    Properties:
      AvailabilityZone: !Select 
        - 0
        - !GetAZs ''
      IamInstanceProfile: !Ref privateapitutorialtestinstanceInstanceProfileFF28A884
      ImageId: >-
        {{resolve:ssm:/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2}}
      InstanceType: t3.nano
      SecurityGroupIds:
        - !GetAtt 
          - privateapitutorialtestinstanceInstanceSecurityGroupEE1A4FEC
          - GroupId
      SubnetId: !Ref privateapitutorialvpcPrivateSubnet1Subnet7BE99BB4
      Tags:
        - Key: Name
          Value: private-api-tutorial
      UserData: !Base64 '#!/bin/bash'
    DependsOn:
      - privateapitutorialtestinstanceInstanceRoleDefaultPolicyA9CCD2E3
      - privateapitutorialtestinstanceInstanceRole4DC30CEF
  privateapitutorialfunctionServiceRoleBB536592:
    Type: 'AWS::IAM::Role'
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: 'sts:AssumeRole'
            Effect: Allow
            Principal:
              Service: lambda.amazonaws.com
        Version: 2012-10-17
      ManagedPolicyArns:
        - !Join 
          - ''
          - - 'arn:'
            - !Ref 'AWS::Partition'
            - ':iam::aws:policy/service-role/AWSLambdaBasicExecutionRole'
  privateapitutorialfunction62AE1AB4:
    Type: 'AWS::Lambda::Function'
    Properties:
      Code:
        ZipFile: >-
          exports.handler = async (event) => {const response = {statusCode: 200,
          body: JSON.stringify('Hello from Lambda!'),}; return response;};
      Role: !GetAtt 
        - privateapitutorialfunctionServiceRoleBB536592
        - Arn
      Handler: index.handler
      Runtime: nodejs12.x
    DependsOn:
      - privateapitutorialfunctionServiceRoleBB536592
  privateapitutorialapi562DA165:
    Type: 'AWS::ApiGateway::RestApi'
    Properties:
      EndpointConfiguration:
        Types:
          - PRIVATE
        VpcEndpointIds:
          - !Ref privateapitutorialvpce487DB922
      Name: private-api-tutorial-api
      Policy:
        Statement:
          - Action: 'execute-api:Invoke'
            Effect: Allow
            Principal: '*'
            Resource: 'execute-api:/*'
          - Action: 'execute-api:Invoke'
            Condition:
              StringNotEquals:
                'aws:SourceVpce': !Ref privateapitutorialvpce487DB922
            Effect: Deny
            Principal: '*'
            Resource: 'execute-api:/*'
        Version: 2012-10-17
  privateapitutorialapiCloudWatchRoleBA970CA2:
    Type: 'AWS::IAM::Role'
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: 'sts:AssumeRole'
            Effect: Allow
            Principal:
              Service: apigateway.amazonaws.com
        Version: 2012-10-17
      ManagedPolicyArns:
        - !Join 
          - ''
          - - 'arn:'
            - !Ref 'AWS::Partition'
            - ':iam::aws:policy/service-role/AmazonAPIGatewayPushToCloudWatchLogs'
  privateapitutorialapiAccount9170A808:
    Type: 'AWS::ApiGateway::Account'
    Properties:
      CloudWatchRoleArn: !GetAtt 
        - privateapitutorialapiCloudWatchRoleBA970CA2
        - Arn
    DependsOn:
      - privateapitutorialapi562DA165
  privateapitutorialapiDeploymentCEEC35F0ea92cf6ccbbb140605a3fa3e41a42d3c:
    Type: 'AWS::ApiGateway::Deployment'
    Properties:
      RestApiId: !Ref privateapitutorialapi562DA165
      Description: Automatically created by the RestApi construct
    DependsOn:
      - privateapitutorialapiproxyANYC575DC9B
      - privateapitutorialapiproxy0E2AC0C6
      - privateapitutorialapiANY6093FFFE
  privateapitutorialapiDeploymentStageprod63A0B770:
    Type: 'AWS::ApiGateway::Stage'
    Properties:
      RestApiId: !Ref privateapitutorialapi562DA165
      DeploymentId: !Ref privateapitutorialapiDeploymentCEEC35F0ea92cf6ccbbb140605a3fa3e41a42d3c
      StageName: prod
  privateapitutorialapiproxy0E2AC0C6:
    Type: 'AWS::ApiGateway::Resource'
    Properties:
      ParentId: !GetAtt 
        - privateapitutorialapi562DA165
        - RootResourceId
      PathPart: '{proxy+}'
      RestApiId: !Ref privateapitutorialapi562DA165
  privateapitutorialapiproxyANYApiPermissionPrivateApiStackprivateapitutorialapiFBEFF733ANYproxy5F078D00:
    Type: 'AWS::Lambda::Permission'
    Properties:
      Action: 'lambda:InvokeFunction'
      FunctionName: !GetAtt 
        - privateapitutorialfunction62AE1AB4
        - Arn
      Principal: apigateway.amazonaws.com
      SourceArn: !Join 
        - ''
        - - 'arn:'
          - !Ref 'AWS::Partition'
          - ':execute-api:'
          - !Ref 'AWS::Region'
          - ':'
          - !Ref 'AWS::AccountId'
          - ':'
          - !Ref privateapitutorialapi562DA165
          - /
          - !Ref privateapitutorialapiDeploymentStageprod63A0B770
          - /*/*
  privateapitutorialapiproxyANYApiPermissionTestPrivateApiStackprivateapitutorialapiFBEFF733ANYproxyDCC3A802:
    Type: 'AWS::Lambda::Permission'
    Properties:
      Action: 'lambda:InvokeFunction'
      FunctionName: !GetAtt 
        - privateapitutorialfunction62AE1AB4
        - Arn
      Principal: apigateway.amazonaws.com
      SourceArn: !Join 
        - ''
        - - 'arn:'
          - !Ref 'AWS::Partition'
          - ':execute-api:'
          - !Ref 'AWS::Region'
          - ':'
          - !Ref 'AWS::AccountId'
          - ':'
          - !Ref privateapitutorialapi562DA165
          - /test-invoke-stage/*/*
  privateapitutorialapiproxyANYC575DC9B:
    Type: 'AWS::ApiGateway::Method'
    Properties:
      HttpMethod: ANY
      ResourceId: !Ref privateapitutorialapiproxy0E2AC0C6
      RestApiId: !Ref privateapitutorialapi562DA165
      AuthorizationType: NONE
      Integration:
        IntegrationHttpMethod: POST
        Type: AWS_PROXY
        Uri: !Join 
          - ''
          - - 'arn:'
            - !Ref 'AWS::Partition'
            - ':apigateway:'
            - !Ref 'AWS::Region'
            - ':lambda:path/2015-03-31/functions/'
            - !GetAtt 
              - privateapitutorialfunction62AE1AB4
              - Arn
            - /invocations
  privateapitutorialapiANYApiPermissionPrivateApiStackprivateapitutorialapiFBEFF733ANYF12376E5:
    Type: 'AWS::Lambda::Permission'
    Properties:
      Action: 'lambda:InvokeFunction'
      FunctionName: !GetAtt 
        - privateapitutorialfunction62AE1AB4
        - Arn
      Principal: apigateway.amazonaws.com
      SourceArn: !Join 
        - ''
        - - 'arn:'
          - !Ref 'AWS::Partition'
          - ':execute-api:'
          - !Ref 'AWS::Region'
          - ':'
          - !Ref 'AWS::AccountId'
          - ':'
          - !Ref privateapitutorialapi562DA165
          - /
          - !Ref privateapitutorialapiDeploymentStageprod63A0B770
          - /*/
  privateapitutorialapiANYApiPermissionTestPrivateApiStackprivateapitutorialapiFBEFF733ANY39D5F849:
    Type: 'AWS::Lambda::Permission'
    Properties:
      Action: 'lambda:InvokeFunction'
      FunctionName: !GetAtt 
        - privateapitutorialfunction62AE1AB4
        - Arn
      Principal: apigateway.amazonaws.com
      SourceArn: !Join 
        - ''
        - - 'arn:'
          - !Ref 'AWS::Partition'
          - ':execute-api:'
          - !Ref 'AWS::Region'
          - ':'
          - !Ref 'AWS::AccountId'
          - ':'
          - !Ref privateapitutorialapi562DA165
          - /test-invoke-stage/*/
  privateapitutorialapiANY6093FFFE:
    Type: 'AWS::ApiGateway::Method'
    Properties:
      HttpMethod: ANY
      ResourceId: !GetAtt 
        - privateapitutorialapi562DA165
        - RootResourceId
      RestApiId: !Ref privateapitutorialapi562DA165
      AuthorizationType: NONE
      Integration:
        IntegrationHttpMethod: POST
        Type: AWS_PROXY
        Uri: !Join 
          - ''
          - - 'arn:'
            - !Ref 'AWS::Partition'
            - ':apigateway:'
            - !Ref 'AWS::Region'
            - ':lambda:path/2015-03-31/functions/'
            - !GetAtt 
              - privateapitutorialfunction62AE1AB4
              - Arn
            - /invocations
Outputs:
  privateapitutorialtestinstanceBastionHostIdD29AD641:
    Description: >-
      Instance ID of the bastion host. Use this to connect via SSM Session
      Manager
    Value: !Ref privateapitutorialtestinstance923DEA4B
  privateapitutorialapiEndpoint8A7425C8:
    Value: !Join 
      - ''
      - - 'https://'
        - !Ref privateapitutorialapi562DA165
        - .execute-api.
        - !Ref 'AWS::Region'
        - .
        - !Ref 'AWS::URLSuffix'
        - /
        - !Ref privateapitutorialapiDeploymentStageprod63A0B770
        - /
  VPCEndpointID:
    Description: The VPC endpoint ID to use for your private API.
    Value: !Ref privateapitutorialvpce487DB922
